; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_on2avc.c_on2avc_decode_quads.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_on2avc.c_on2avc_decode_quads.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { %struct.TYPE_4__* }
%struct.TYPE_4__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_5__*, i32*, float*, i32, i32, float)* @on2avc_decode_quads to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @on2avc_decode_quads(%struct.TYPE_5__* %0, i32* %1, float* %2, i32 %3, i32 %4, float %5) #0 {
  %7 = alloca %struct.TYPE_5__*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca float*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca float, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %7, align 8
  store i32* %1, i32** %8, align 8
  store float* %2, float** %9, align 8
  store i32 %3, i32* %10, align 4
  store i32 %4, i32* %11, align 4
  store float %5, float* %12, align 4
  store i32 0, i32* %13, align 4
  br label %17

17:                                               ; preds = %53, %6
  %18 = load i32, i32* %13, align 4
  %19 = load i32, i32* %10, align 4
  %20 = icmp slt i32 %18, %19
  br i1 %20, label %21, label %56

21:                                               ; preds = %17
  %22 = load i32*, i32** %8, align 8
  %23 = load %struct.TYPE_5__*, %struct.TYPE_5__** %7, align 8
  %24 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %23, i32 0, i32 0
  %25 = load %struct.TYPE_4__*, %struct.TYPE_4__** %24, align 8
  %26 = load i32, i32* %11, align 4
  %27 = sext i32 %26 to i64
  %28 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %25, i64 %27
  %29 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %28, i32 0, i32 0
  %30 = load i32, i32* %29, align 4
  %31 = call i32 @get_vlc2(i32* %22, i32 %30, i32 9, i32 3)
  store i32 %31, i32* %15, align 4
  store i32 0, i32* %14, align 4
  br label %32

32:                                               ; preds = %49, %21
  %33 = load i32, i32* %14, align 4
  %34 = icmp slt i32 %33, 4
  br i1 %34, label %35, label %52

35:                                               ; preds = %32
  %36 = load i32, i32* %15, align 4
  %37 = load i32, i32* %14, align 4
  %38 = mul nsw i32 %37, 4
  %39 = sub nsw i32 12, %38
  %40 = ashr i32 %36, %39
  %41 = and i32 %40, 15
  %42 = call i32 @sign_extend(i32 %41, i32 4)
  store i32 %42, i32* %16, align 4
  %43 = load i32, i32* %16, align 4
  %44 = load float, float* %12, align 4
  %45 = call i32 @on2avc_scale(i32 %43, float %44)
  %46 = sitofp i32 %45 to float
  %47 = load float*, float** %9, align 8
  %48 = getelementptr inbounds float, float* %47, i32 1
  store float* %48, float** %9, align 8
  store float %46, float* %47, align 4
  br label %49

49:                                               ; preds = %35
  %50 = load i32, i32* %14, align 4
  %51 = add nsw i32 %50, 1
  store i32 %51, i32* %14, align 4
  br label %32

52:                                               ; preds = %32
  br label %53

53:                                               ; preds = %52
  %54 = load i32, i32* %13, align 4
  %55 = add nsw i32 %54, 4
  store i32 %55, i32* %13, align 4
  br label %17

56:                                               ; preds = %17
  ret i32 0
}

declare dso_local i32 @get_vlc2(i32*, i32, i32, i32) #1

declare dso_local i32 @sign_extend(i32, i32) #1

declare dso_local i32 @on2avc_scale(i32, float) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
